# rk2

./: CMakeLists.txt  CPackConfig.cmake
.github/workflows/: CPack.yml  rk2.yml
_build/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  Makefile  cmake_install.cmake  install_manifest.txt  my_test  rk2-0....deb
_build/_CPack_Packages/Linux/DEB/: rk2-0....deb
_build/_CPack_Packages/Linux/DEB/Factory-0...-Linux/: md5sums
artifacts/rk2-0.../control/: control
source/: help_h_for tests.h  help_h_for_tests.h
tests/: tests.cpp
